--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "test": "node test/index.js",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeds/index.js"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
