--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "seed": "node seeds/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
